[package]
name = "flossy-cli"
version = "0.1.0"
authors = ["goblinnode <goblinnode@gmail.com>"]
edition = "2021"
description = "A CLI tool for adding emojis to commit messages"
license = "MIT"
repository = "https://github.com/goblinnode/flossy-ui"
homepage = "https://github.com/goblinnode/flossy-ui"

[[bin]]
name = "flossy"
path = "src/main.rs"

[dependencies]
clap = "4.4"  # For parsing command-line arguments
dialoguer = "0.10.4"  # For interactive prompts
